--- a/assets/style.css
+++ b/assets/style.css
@@ -3,22 +3,45 @@
     padding: 0;
     box-sizing: border-box;
 }
-.kmf-cpr-field{
+.leaflet-control-zoom a{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+	.kmf-store-locator-marker svg{
+		margin-right: 14px;
+    	color: #00f;
+    	width:30px;
+	}
+.kmf-store-locator-marker .title {
     display: flex;
-    width: 400px;
-    border: 1px solid;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    padding: 0 20px;
+    border-bottom: 1px solid;
+    font-size: 1.5em;
+    font-weight: bold;
+    padding: 5px;
+    margin: 15px;
 }
-.kmf-cpr-field input[type=text]{
-    height: 30px;
-}
-.kmf-cpr-field.sup{
 
+.kmf-store-locator-marker .info {
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    flex-direction: column;
+    padding: 0 10px 0 18px;
 }
-.kmf-cpr-field.sup .inputs{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 10px;
+
+.kmf-store-locator-marker p {
+    display:inline-flex;
+    justify-content: center;
+    align-items:center;
+    font-weight:bold;
+    margin:4px 0;
+    padding:0;
+}
+.leaflet-container a.leaflet-popup-close-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
